\name{NEWS}
\title{News for Package \pkg{epidecodeR}}

\section{Changes in version 0.99.1}{
    \itemize{
        \item Created package epidecodeR
    }}

\section{Changes in version 0.99.2}{
    \itemize{
        \item Added DESCRIPTION
        \item Added NAMESPACE
        \item Added man pages
        \item Added inst/extdata dir
    }}

\section{Changes in version 0.99.3}{
    \itemize{
        \item Changes to DESCRIPTION
        \item Changes to NAMESPACE
        \item Added NEWS file
        \item Added inst/script directory
        \item Changes to vignettes
        \item Changes to man pages
        \item Changes to R code
    }}
    
\section{Changes in version 0.99.4}{
    \itemize{
        \item REMOVED LICENSE AND HTML files
    }}
    
\section{Changes in version 0.99.6}{
    \itemize{
        \item Removed NEWS files
        \item Added NEWS.rd in inst/ dir
    }}

\section{Changes in version 0.99.12}{
    \itemize{
        \item Version bump
      }}