@@ -1,7 +1,7 @@
 Package: epidecodeR
 Type: Package
 Title: epidecodeR: a functional exploration tool for epigenetic and epitranscriptomic regulation
-Version: 1.0.0
+Version: 1.0.1
 Authors@R: c(person("Kandarp", "Joshi", email = "kandarpbioinfo@gmail.com",
                   role = c("aut", "cre")),
              person("Dan", "Ohtan Wang", email = "ohtan@riken.jp",
