@@ -1,39 +1,0 @@
-\name{NEWS}
-\title{News for Package \pkg{epidecodeR}}
-
-\section{Changes in version v0.99.1}{
-    \itemize{
-        \item \code Created package epidecodeR
-    }}
-
-\section{Changes in version v0.99.2}{
-    \itemize{
-        \item Added DESCRIPTION
-        \item Added NAMESPACE
-        \item Added \code{swap_rownames} argument to plot functions, allowing selection of genes using a rowData column.
-        \item Added \code{column_annotation_colors} argument to \code{plotHeatmap}
-        \item Added man pages
-        \item Added inst/extdata dir
-    }}
-
-\section{Changes in version v0.99.3}{
-    \itemize{
-        \item Changes to DESCRIPTION
-        \item Changes to NAMESPACE
-        \item Added NEWS file
-        \item Added inst/script directory
-        \item Changes to vignettes
-        \item Changes to man pages
-        \item Changes to R code
-    }}
-    
-\section{Changes in version v0.99.4}{
-    \itemize{
-        \item REMOVED LICENSE AND HTML files
-    }}
-    
-\section{Changes in version v0.99.4}{
-    \itemize{
-        \item Removed NEWS files
-        \item Added NEWS.rd in inst/ dir
-    }}
